--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lucide-react": "^0.435.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.6",
+    "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
