--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
-  "name": "festival_robotica",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@tabler/icons-react": "^3.16.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.3.30",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.435.0",
-    "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.6",
-    "next-auth": "^5.0.0-beta.20",
-    "next-themes": "^0.3.0",
-    "nodemailer": "^6.9.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-3d": "^1.0.7",
-    "typescript": "^5"
-  }
+    "name": "festival_robotica",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@auth/pg-adapter": "^1.5.0",
+        "@hookform/resolvers": "^3.9.0",
+        "@neondatabase/serverless": "^0.9.5",
+        "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.1",
+        "@radix-ui/react-tooltip": "^1.1.2",
+        "@tabler/icons-react": "^3.16.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "framer-motion": "^11.3.30",
+        "geist": "^1.3.1",
+        "lucide-react": "^0.435.0",
+        "mini-svg-data-uri": "^1.4.4",
+        "next": "14.2.6",
+        "next-auth": "^5.0.0-beta.20",
+        "next-themes": "^0.3.0",
+        "nodemailer": "^6.9.15",
+        "pg": "^8.12.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.53.0",
+        "tailwind-merge": "^2.5.2",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18.3.4",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.6",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "tailwindcss-3d": "^1.0.7",
+        "typescript": "^5"
+    }
 }
